fix spacing, move some code

--- a/components/storeContent/StoreContent.module.scss
+++ b/components/storeContent/StoreContent.module.scss
@@ -5,36 +5,33 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-
   background-color: #45565e;
   padding-top: 2rem;
   padding-bottom: 2rem;
   border: 1px solid #1f343e;
+
+  @include desktop {
+    flex-direction: row;
+    justify-content: center;
+  }
 
   .reviewsWrapper {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
-
     font-size: 1rem;
     color: #fff;
+
+    @include desktop {
+      margin-left: 1rem;
+      font-size: 1.25rem;
+    }
 
     .starsRow {
       display: flex;
       align-items: center;
       gap: 0.3rem;
-    }
-  }
-
-  @include desktop {
-    flex-direction: row;
-    justify-content: center;
-    font-size: 1.25rem;
-
-    .reviewsWrapper {
-      margin-left: 1rem;
-      font-size: 1.25rem;
     }
   }
 }
